# master-thesis-ssh-rlkex

./: .gitignore  LICENSE  README.md  environment.yml  graph.html  requirements.txt
Graph_Gen/: README.md  revised_graph_gen_v4.py
Graph_Gen/graph_gen_rust/: Cargo.toml
Graph_Gen/graph_gen_rust/src/: main.rs
Graph_Insights/: README.md  complexity_insights.ipynb  connected_comp.py  depth_check.py  graph.html  graph_data_insights.py  graph_to_spt.py  graph_viz.py  graph_viz_matplot.py  neighbours_check.py  test_gnn.py
Graph_Insights/path_viz/: graph_tes.html  graph_viz_sccs.html  path_exist.ipynb  path_exists.py  path_viz.ipynb  subgraph.html  viz_sccs.ipynb
Heuristics/: README.md  nb_keys_classifier.ipynb  nb_keys_classifier.py  root_heuristic.py  root_heuristic_eval.ipynb  subtree_heuristic.py
RL/: README.md  actor_critic_branch_selection.py  test_graph_embedding.py  train_test_spliter.py
RL/DQN/: test_dqn_fixed_action_training.py  test_dqn_fixed_action_training_lstm.py
RL/GNNDRL/: fixed_action_space.py  fixed_action_space_DQL v1.py  fixed_action_space_DQL v2_key_detect_single_state copy.py  fixed_action_space_DQL v2_key_detect_single_state.py  fixed_action_space_DQL v2_key_detect_single_state_gnn.py  fixed_action_space_DQL.py  fixed_action_space_GDQL v1.py  fixed_action_space_full_env_dql.py  fixed_action_space_ppo.py  fixed_action_space_reinforce.py  gnndrl_test.py  path_drl.py  stable_baseline.ipynb
RL/rl_base/: rl_environment.py
docs/: README.md
models/: complex_model_0_79.pt  model.pt  root_heuristic_model.joblib  test.pt  wow.pt
(+56 files in other folders)
